<resources>
    <string name="app_name">Ridesharing</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <string name="title_activity_maps">Map</string>
    <!-- Toolbar/ActionBar Title -->
    <string name="home_title">Home</string>
    <string name="settings_title">Settings</string>
    <string name="notification_title">Notification</string>
    <string name="profile_title">My Profile</string>
    <string name="about_title">About</string>
    <string name="log_out_title">Log Out</string>
    <string name="developed_by">Developed by Kamal</string>
    <string name="apps_details">
        Ridesharing
        \nApps Version: 1.0
        \nDeveloped by Mustofa Kamal
    </string>

    <!-- Intro -->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="play_again">Play Again</string>

    <!-- ProgressDialog -->
    <string name="loading_title">Loading</string>
    <string name="loading">Wait while loading...</string>
    <string name="progress_img">Image loading...</string>
    <string name="progress">Please wait...</string>

    <!-- Rider -->
    <string-array name="district_array">
        <item>Select District</item>
        <item>Barguna</item>
        <item>Barisal</item>
        <item>Bhola</item>
        <item>Jhalokati</item>
        <item>Patuakhali</item>
        <item>Pirojpur</item>
        <item>Bandarban</item>
        <item>Brahmanbaria</item>
        <item>Chandpur</item>
        <item>Chittagong</item>
        <item>Comilla</item>
        <item>Cox s Bazar</item>
        <item>Feni</item>
        <item>Khagrachhari</item>
        <item>Lakshmipur</item>
        <item>Noakhali</item>
        <item>Rangamati</item>
        <item>Dhaka</item>
        <item>Faridpur</item>
        <item>Gazipur</item>
        <item>Gopalganj</item>
        <item>Kishoreganj</item>
        <item>Madaripur</item>
        <item>Manikganj</item>
        <item>Munshiganj</item>
        <item>Narayanganj</item>
        <item>Narsingdi</item>
        <item>Rajbari</item>
        <item>Shariatpur</item>
        <item>Tangail</item>
        <item>Bagerhat</item>
        <item>Chuadanga</item>
        <item>Jessore</item>
        <item>Jhenaidah</item>
        <item>Khulna</item>
        <item>Kushtia</item>
        <item>Magura</item>
        <item>Meherpur</item>
        <item>Narail</item>
        <item>Satkhira</item>
        <item>Jamalpur</item>
        <item>Mymensingh</item>
        <item>Netrokona</item>
        <item>Sherpur</item>
        <item>Bogra</item>
        <item>Joypurhat</item>
        <item>Naogaon</item>
        <item>Natore</item>
        <item>Chapai Nawabganj</item>
        <item>Pabna</item>
        <item>Rajshahi</item>
        <item>Sirajganj</item>
        <item>Dinajpur</item>
        <item>Gaibandha</item>
        <item>Kurigram</item>
        <item>Lalmonirhat</item>
        <item>Nilphamari</item>
        <item>Panchagarh</item>
        <item>Rangpur</item>
        <item>Thakurgaon</item>
        <item>Habiganj</item>
        <item>Moulvibazar</item>
        <item>Sunamganj</item>
        <item>Sylhet</item>
    </string-array>
    <string-array name="vehicle_array">
        <item>Select Vehicle</item>
        <item>Car</item>
        <item>Bike</item>
        <item>CNG Autorickshaw</item>
        <item>Bicycle</item>
    </string-array>
</resources>
